# quo

./: .gitignore  render.yaml
backend/: .env.example  Dockerfile  Procfile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: fdabc88306e8_create_users_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/middleware/: auth.py  cache.py  error.py
backend/app/api/v1/: auth.py  banks.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: deps.py  init_db.py  session.py
backend/app/db/models/: user.py
backend/app/db/repositories/: users.py
backend/app/schemas/: belvo.py  token.py  user.py
backend/app/services/: belvo.py  belvo_service.py  link_factory.py  token_service.py
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/composables/: useRetryFetch.ts
frontend/src/config/: index.ts
frontend/src/router/: index.ts
frontend/src/stores/: registerStatus.ts  session.ts
frontend/src/types/: api.ts
frontend/src/utils/: index.ts
frontend/src/views/: AccountsView.vue  HomeView.vue  LoginView.vue  RegisterView.vue  TransactionsView.vue
